[package]
name = "rpenc"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Cinnamon415 <248340784+Cinnamon415@users.noreply.github.com>"]

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.50", features = ["derive", "cargo"] }
indicatif = "0.18.1"
rand = "0.9.2"
rpassword = "7.4.0"
tar = "0.4.44"
tempfile = "3.23.0"
walkdir = "2.5.0"
zeroize = "1.8.2"
zstd = "0.13.3"

